{
  "version": 4,
  "terraform_version": "1.11.1",
  "serial": 1067,
  "lineage": "70544311-d0ce-e552-1140-05cdbc4bb398",
  "resources": [
    {
      "module": "module.aurora-postgres",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:277707100225:security-group/sg-01d87dc07cd3b7d74",
            "description": "Allow access to Aurora postgres from EKS private subnets",
            "egress": [],
            "id": "sg-01d87dc07cd3b7d74",
            "ingress": [],
            "name": "rds-postgres-private-sg",
            "name_prefix": "",
            "owner_id": "277707100225",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_rds"
            },
            "tags_all": {
              "Name": "allow_rds"
            },
            "timeouts": null,
            "vpc_id": "vpc-08876039a17181d15"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aurora-postgres",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "egress_rule_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:277707100225:security-group-rule/sgr-0065433220577bd69",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0065433220577bd69",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-01d87dc07cd3b7d74",
            "security_group_rule_id": "sgr-0065433220577bd69",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aurora-postgres.aws_security_group.rds_sg",
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aurora-postgres",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:277707100225:security-group-rule/sgr-0829c906cc4b145e6",
            "cidr_ipv4": "172.24.0.0/21",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 5432,
            "id": "sgr-0829c906cc4b145e6",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-01d87dc07cd3b7d74",
            "security_group_rule_id": "sgr-0829c906cc4b145e6",
            "tags": null,
            "tags_all": {},
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aurora-postgres.aws_security_group.rds_sg",
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_jmeter",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jmeter_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fe747a5238c7b481",
            "arn": "arn:aws:ec2:ap-southeast-3:277707100225:instance/i-07c585d167a3345b8",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 8,
            "cpu_options": [
              {
                "core_count": 8,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07c585d167a3345b8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m6g.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "devops-poc",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09c1f65810a15733c",
            "private_dns": "ip-172-24-1-221.ap-southeast-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.24.1.221",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 10000,
                "throughput": 125,
                "volume_id": "vol-00845cc7152fdea57",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b6ca07d6d756ab37",
            "tags": {
              "Name": "jmeter-master"
            },
            "tags_all": {
              "Name": "jmeter-master"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-024476c42099eb789"
            ]
          },
          "dependencies": [
            "module.ec2_jmeter.aws_security_group.jmeter_sg",
            "module.ec2_jmeter.module.ubuntu_ami.data.aws_ami.ubuntu",
            "module.network.aws_subnet.private_subnet_1",
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_jmeter",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jmeter_slave",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fe747a5238c7b481",
            "arn": "arn:aws:ec2:ap-southeast-3:277707100225:instance/i-0da31225ae47c3cf5",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 32,
            "cpu_options": [
              {
                "core_count": 32,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0da31225ae47c3cf5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m6g.8xlarge",
            "ipv6_address_count": 0,
            "key_name": "devops-poc",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07657fb0bc22ae46e",
            "private_dns": "ip-172-24-1-169.ap-southeast-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.24.1.169",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 10000,
                "throughput": 125,
                "volume_id": "vol-044347488888ae26e",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b6ca07d6d756ab37",
            "tags": {
              "Name": "jmeter-slave-1"
            },
            "tags_all": {
              "Name": "jmeter-slave-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-024476c42099eb789"
            ]
          },
          "dependencies": [
            "module.ec2_jmeter.aws_security_group.jmeter_sg",
            "module.ec2_jmeter.module.ubuntu_ami.data.aws_ami.ubuntu",
            "module.network.aws_subnet.private_subnet_1",
            "module.network.aws_subnet.private_subnet_2",
            "module.network.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fe747a5238c7b481",
            "arn": "arn:aws:ec2:ap-southeast-3:277707100225:instance/i-0642c62e98dc5b1e4",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-3b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 32,
            "cpu_options": [
              {
                "core_count": 32,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0642c62e98dc5b1e4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m6g.8xlarge",
            "ipv6_address_count": 0,
            "key_name": "devops-poc",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-070e0348ad631f98f",
            "private_dns": "ip-172-24-2-240.ap-southeast-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.24.2.240",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 10000,
                "throughput": 125,
                "volume_id": "vol-01184a3509665f8fc",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05d639f6ffec0cc98",
            "tags": {
              "Name": "jmeter-slave-2"
            },
            "tags_all": {
              "Name": "jmeter-slave-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-024476c42099eb789"
            ]
          },
          "dependencies": [
            "module.ec2_jmeter.aws_security_group.jmeter_sg",
            "module.ec2_jmeter.module.ubuntu_ami.data.aws_ami.ubuntu",
            "module.network.aws_subnet.private_subnet_1",
            "module.network.aws_subnet.private_subnet_2",
            "module.network.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fe747a5238c7b481",
            "arn": "arn:aws:ec2:ap-southeast-3:277707100225:instance/i-0b25e16b3f742d218",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 32,
            "cpu_options": [
              {
                "core_count": 32,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b25e16b3f742d218",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m6g.8xlarge",
            "ipv6_address_count": 0,
            "key_name": "devops-poc",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04e50810c0f63130d",
            "private_dns": "ip-172-24-1-195.ap-southeast-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.24.1.195",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 10000,
                "throughput": 125,
                "volume_id": "vol-00a360baa7c9f42fa",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b6ca07d6d756ab37",
            "tags": {
              "Name": "jmeter-slave-3"
            },
            "tags_all": {
              "Name": "jmeter-slave-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-024476c42099eb789"
            ]
          },
          "dependencies": [
            "module.ec2_jmeter.aws_security_group.jmeter_sg",
            "module.ec2_jmeter.module.ubuntu_ami.data.aws_ami.ubuntu",
            "module.network.aws_subnet.private_subnet_1",
            "module.network.aws_subnet.private_subnet_2",
            "module.network.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fe747a5238c7b481",
            "arn": "arn:aws:ec2:ap-southeast-3:277707100225:instance/i-079281071dde2d2d5",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-3b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 32,
            "cpu_options": [
              {
                "core_count": 32,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-079281071dde2d2d5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m6g.8xlarge",
            "ipv6_address_count": 0,
            "key_name": "devops-poc",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03651090d999fdc7f",
            "private_dns": "ip-172-24-2-137.ap-southeast-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.24.2.137",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 10000,
                "throughput": 125,
                "volume_id": "vol-07505d41961f40939",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05d639f6ffec0cc98",
            "tags": {
              "Name": "jmeter-slave-4"
            },
            "tags_all": {
              "Name": "jmeter-slave-4"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-024476c42099eb789"
            ]
          },
          "dependencies": [
            "module.ec2_jmeter.aws_security_group.jmeter_sg",
            "module.ec2_jmeter.module.ubuntu_ami.data.aws_ami.ubuntu",
            "module.network.aws_subnet.private_subnet_1",
            "module.network.aws_subnet.private_subnet_2",
            "module.network.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fe747a5238c7b481",
            "arn": "arn:aws:ec2:ap-southeast-3:277707100225:instance/i-0877e428f87c52dd1",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 32,
            "cpu_options": [
              {
                "core_count": 32,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0877e428f87c52dd1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m6g.8xlarge",
            "ipv6_address_count": 0,
            "key_name": "devops-poc",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ea2d7ed7ad2d85e6",
            "private_dns": "ip-172-24-1-121.ap-southeast-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.24.1.121",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 10000,
                "throughput": 125,
                "volume_id": "vol-0c9e82df6aee4c8f4",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b6ca07d6d756ab37",
            "tags": {
              "Name": "jmeter-slave-5"
            },
            "tags_all": {
              "Name": "jmeter-slave-5"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-024476c42099eb789"
            ]
          },
          "dependencies": [
            "module.ec2_jmeter.aws_security_group.jmeter_sg",
            "module.ec2_jmeter.module.ubuntu_ami.data.aws_ami.ubuntu",
            "module.network.aws_subnet.private_subnet_1",
            "module.network.aws_subnet.private_subnet_2",
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_jmeter",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jmeter_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:277707100225:security-group/sg-024476c42099eb789",
            "description": "Allow access for Jmeter",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-024476c42099eb789",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.24.0.0/21"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "172.24.0.0/21"
                ],
                "description": "Default Jmeter",
                "from_port": 4445,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4445
              },
              {
                "cidr_blocks": [
                  "172.24.0.0/21"
                ],
                "description": "Digunakan jika ada lebih dari satu slave, pastikan kisaran ini terbuka",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 50000
              },
              {
                "cidr_blocks": [
                  "172.24.0.0/21"
                ],
                "description": "RMI Registry untuk komunikasi antara master dan slave",
                "from_port": 1099,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1099
              }
            ],
            "name": "jmeter-sg",
            "name_prefix": "",
            "owner_id": "277707100225",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jmeter-sg"
            },
            "tags_all": {
              "Name": "jmeter-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08876039a17181d15"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_jmeter",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "egress_rule_jumpserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:277707100225:security-group-rule/sgr-02a65006abf64f1fb",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-02a65006abf64f1fb",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-024476c42099eb789",
            "security_group_rule_id": "sgr-02a65006abf64f1fb",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_jmeter.aws_security_group.jmeter_sg",
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_jmeter",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_jmeter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:277707100225:security-group-rule/sgr-0cedc92ecfb359231",
            "cidr_ipv4": "172.24.0.0/21",
            "cidr_ipv6": null,
            "description": "Default Jmeter",
            "from_port": 4445,
            "id": "sgr-0cedc92ecfb359231",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-024476c42099eb789",
            "security_group_rule_id": "sgr-0cedc92ecfb359231",
            "tags": null,
            "tags_all": {},
            "to_port": 4445
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_jmeter.aws_security_group.jmeter_sg",
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_jmeter",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_jmeter_slave",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:277707100225:security-group-rule/sgr-00301c1286cbd60b2",
            "cidr_ipv4": "172.24.0.0/21",
            "cidr_ipv6": null,
            "description": "Digunakan jika ada lebih dari satu slave, pastikan kisaran ini terbuka",
            "from_port": 30000,
            "id": "sgr-00301c1286cbd60b2",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-024476c42099eb789",
            "security_group_rule_id": "sgr-00301c1286cbd60b2",
            "tags": null,
            "tags_all": {},
            "to_port": 50000
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_jmeter.aws_security_group.jmeter_sg",
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_jmeter",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_rmi_registry",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:277707100225:security-group-rule/sgr-077510fc3db191291",
            "cidr_ipv4": "172.24.0.0/21",
            "cidr_ipv6": null,
            "description": "RMI Registry untuk komunikasi antara master dan slave",
            "from_port": 1099,
            "id": "sgr-077510fc3db191291",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-024476c42099eb789",
            "security_group_rule_id": "sgr-077510fc3db191291",
            "tags": null,
            "tags_all": {},
            "to_port": 1099
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_jmeter.aws_security_group.jmeter_sg",
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_jmeter",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:277707100225:security-group-rule/sgr-027755e3e5eb7f91b",
            "cidr_ipv4": "172.24.0.0/21",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-027755e3e5eb7f91b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-024476c42099eb789",
            "security_group_rule_id": "sgr-027755e3e5eb7f91b",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_jmeter.aws_security_group.jmeter_sg",
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_jumpserver",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jumpserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fe747a5238c7b481",
            "arn": "arn:aws:ec2:ap-southeast-3:277707100225:instance/i-04398dfee5133bc50",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "msk-poc-roles",
            "id": "i-04398dfee5133bc50",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m6g.medium",
            "ipv6_address_count": 0,
            "key_name": "devops-poc",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ecadd55b3b005295",
            "private_dns": "ip-172-24-3-144.ap-southeast-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.24.3.144",
            "public_dns": "ec2-43-218-128-82.ap-southeast-3.compute.amazonaws.com",
            "public_ip": "43.218.128.82",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 6000,
                "throughput": 125,
                "volume_id": "vol-068f0b250c9e1c136",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-003345acf35623b18",
            "tags": {
              "Name": "jumphost"
            },
            "tags_all": {
              "Name": "jumphost"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-056c274b3667c6498"
            ]
          },
          "dependencies": [
            "module.ec2_jumpserver.aws_security_group.jumpserver_sg",
            "module.ec2_jumpserver.module.ubuntu_ami.data.aws_ami.ubuntu",
            "module.network.aws_subnet.public_subnet_1",
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_jumpserver",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jumpserver_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:277707100225:security-group/sg-056c274b3667c6498",
            "description": "Allow access for DevOps VM",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-056c274b3667c6498",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "devops-sg",
            "name_prefix": "",
            "owner_id": "277707100225",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-sg"
            },
            "tags_all": {
              "Name": "devops-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08876039a17181d15"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_jumpserver",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "egress_rule_jumpserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:277707100225:security-group-rule/sgr-0971215e15eb4e76e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0971215e15eb4e76e",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-056c274b3667c6498",
            "security_group_rule_id": "sgr-0971215e15eb4e76e",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_jumpserver.aws_security_group.jumpserver_sg",
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_jumpserver",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:277707100225:security-group-rule/sgr-02eeab892a7603f0d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-02eeab892a7603f0d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-056c274b3667c6498",
            "security_group_rule_id": "sgr-02eeab892a7603f0d",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_jumpserver.aws_security_group.jumpserver_sg",
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_mongo",
      "mode": "managed",
      "type": "aws_instance",
      "name": "mongos_config_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fe747a5238c7b481",
            "arn": "arn:aws:ec2:ap-southeast-3:277707100225:instance/i-098e473808b07e319",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-098e473808b07e319",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m6g.large",
            "ipv6_address_count": 0,
            "key_name": "devops-poc",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cd5482e1955fdbfb",
            "private_dns": "ip-172-24-1-160.ap-southeast-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.24.1.160",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 10000,
                "throughput": 125,
                "volume_id": "vol-0ebcd22294a89e910",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b6ca07d6d756ab37",
            "tags": {
              "Name": "mongos-config-server-1"
            },
            "tags_all": {
              "Name": "mongos-config-server-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-066f223a84aebc3b0"
            ]
          },
          "dependencies": [
            "module.ec2_mongo.aws_security_group.mongos_sg",
            "module.ec2_mongo.module.ubuntu_ami.data.aws_ami.ubuntu",
            "module.network.aws_subnet.private_subnet_1",
            "module.network.aws_subnet.private_subnet_2",
            "module.network.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fe747a5238c7b481",
            "arn": "arn:aws:ec2:ap-southeast-3:277707100225:instance/i-071b069f0bf4a3b17",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-3b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-071b069f0bf4a3b17",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m6g.large",
            "ipv6_address_count": 0,
            "key_name": "devops-poc",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-064214cb1562cb725",
            "private_dns": "ip-172-24-2-108.ap-southeast-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.24.2.108",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 10000,
                "throughput": 125,
                "volume_id": "vol-041aba34116ce8dfe",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05d639f6ffec0cc98",
            "tags": {
              "Name": "mongos-config-server-2"
            },
            "tags_all": {
              "Name": "mongos-config-server-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-066f223a84aebc3b0"
            ]
          },
          "dependencies": [
            "module.ec2_mongo.aws_security_group.mongos_sg",
            "module.ec2_mongo.module.ubuntu_ami.data.aws_ami.ubuntu",
            "module.network.aws_subnet.private_subnet_1",
            "module.network.aws_subnet.private_subnet_2",
            "module.network.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fe747a5238c7b481",
            "arn": "arn:aws:ec2:ap-southeast-3:277707100225:instance/i-01661c35700d832b2",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01661c35700d832b2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m6g.large",
            "ipv6_address_count": 0,
            "key_name": "devops-poc",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08105f8d1164b66b2",
            "private_dns": "ip-172-24-1-57.ap-southeast-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.24.1.57",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 10000,
                "throughput": 125,
                "volume_id": "vol-03c52063aa9ce317b",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b6ca07d6d756ab37",
            "tags": {
              "Name": "mongos-config-server-3"
            },
            "tags_all": {
              "Name": "mongos-config-server-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-066f223a84aebc3b0"
            ]
          },
          "dependencies": [
            "module.ec2_mongo.aws_security_group.mongos_sg",
            "module.ec2_mongo.module.ubuntu_ami.data.aws_ami.ubuntu",
            "module.network.aws_subnet.private_subnet_1",
            "module.network.aws_subnet.private_subnet_2",
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_mongo",
      "mode": "managed",
      "type": "aws_instance",
      "name": "mongos_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fe747a5238c7b481",
            "arn": "arn:aws:ec2:ap-southeast-3:277707100225:instance/i-0227558aa7d2432b8",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 8,
            "cpu_options": [
              {
                "core_count": 8,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0227558aa7d2432b8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m6g.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "devops-poc",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a52840c0af39506c",
            "private_dns": "ip-172-24-1-61.ap-southeast-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.24.1.61",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 10000,
                "throughput": 125,
                "volume_id": "vol-04a2e95b1177379d4",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b6ca07d6d756ab37",
            "tags": {
              "Name": "mongos-server-1"
            },
            "tags_all": {
              "Name": "mongos-server-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-066f223a84aebc3b0"
            ]
          },
          "dependencies": [
            "module.ec2_mongo.aws_security_group.mongos_sg",
            "module.ec2_mongo.module.ubuntu_ami.data.aws_ami.ubuntu",
            "module.network.aws_subnet.private_subnet_1",
            "module.network.aws_subnet.private_subnet_2",
            "module.network.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fe747a5238c7b481",
            "arn": "arn:aws:ec2:ap-southeast-3:277707100225:instance/i-0abcc5a90087672ed",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-3b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 8,
            "cpu_options": [
              {
                "core_count": 8,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0abcc5a90087672ed",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m6g.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "devops-poc",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08b4384625abedcc1",
            "private_dns": "ip-172-24-2-112.ap-southeast-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.24.2.112",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 10000,
                "throughput": 125,
                "volume_id": "vol-03d51a0f81e3b7429",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05d639f6ffec0cc98",
            "tags": {
              "Name": "mongos-server-2"
            },
            "tags_all": {
              "Name": "mongos-server-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-066f223a84aebc3b0"
            ]
          },
          "dependencies": [
            "module.ec2_mongo.aws_security_group.mongos_sg",
            "module.ec2_mongo.module.ubuntu_ami.data.aws_ami.ubuntu",
            "module.network.aws_subnet.private_subnet_1",
            "module.network.aws_subnet.private_subnet_2",
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_mongo",
      "mode": "managed",
      "type": "aws_instance",
      "name": "mongos_shard_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fe747a5238c7b481",
            "arn": "arn:aws:ec2:ap-southeast-3:277707100225:instance/i-0f9d25f888157084f",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 16,
            "cpu_options": [
              {
                "core_count": 16,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f9d25f888157084f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m6g.4xlarge",
            "ipv6_address_count": 0,
            "key_name": "devops-poc",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a230d3a541a55852",
            "private_dns": "ip-172-24-1-189.ap-southeast-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.24.1.189",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 10000,
                "throughput": 125,
                "volume_id": "vol-083267bbe6bf44db8",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b6ca07d6d756ab37",
            "tags": {
              "Name": "mongos-shard-1a"
            },
            "tags_all": {
              "Name": "mongos-shard-1a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-066f223a84aebc3b0"
            ]
          },
          "dependencies": [
            "module.ec2_mongo.aws_security_group.mongos_sg",
            "module.ec2_mongo.module.ubuntu_ami.data.aws_ami.ubuntu",
            "module.network.aws_subnet.private_subnet_1",
            "module.network.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fe747a5238c7b481",
            "arn": "arn:aws:ec2:ap-southeast-3:277707100225:instance/i-0bffb7fc1db702100",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 16,
            "cpu_options": [
              {
                "core_count": 16,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bffb7fc1db702100",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m6g.4xlarge",
            "ipv6_address_count": 0,
            "key_name": "devops-poc",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-031fbd4db06ee6354",
            "private_dns": "ip-172-24-1-200.ap-southeast-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.24.1.200",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 10000,
                "throughput": 125,
                "volume_id": "vol-072819090beff3753",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b6ca07d6d756ab37",
            "tags": {
              "Name": "mongos-shard-1b"
            },
            "tags_all": {
              "Name": "mongos-shard-1b"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-066f223a84aebc3b0"
            ]
          },
          "dependencies": [
            "module.ec2_mongo.aws_security_group.mongos_sg",
            "module.ec2_mongo.module.ubuntu_ami.data.aws_ami.ubuntu",
            "module.network.aws_subnet.private_subnet_1",
            "module.network.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fe747a5238c7b481",
            "arn": "arn:aws:ec2:ap-southeast-3:277707100225:instance/i-07ca6513201ce36e8",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 16,
            "cpu_options": [
              {
                "core_count": 16,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07ca6513201ce36e8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m6g.4xlarge",
            "ipv6_address_count": 0,
            "key_name": "devops-poc",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0edb023dfbcba7e14",
            "private_dns": "ip-172-24-1-140.ap-southeast-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.24.1.140",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 10000,
                "throughput": 125,
                "volume_id": "vol-086394abfa3eef983",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b6ca07d6d756ab37",
            "tags": {
              "Name": "mongos-shard-1c"
            },
            "tags_all": {
              "Name": "mongos-shard-1c"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-066f223a84aebc3b0"
            ]
          },
          "dependencies": [
            "module.ec2_mongo.aws_security_group.mongos_sg",
            "module.ec2_mongo.module.ubuntu_ami.data.aws_ami.ubuntu",
            "module.network.aws_subnet.private_subnet_1",
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_mongo",
      "mode": "managed",
      "type": "aws_instance",
      "name": "mongos_shard_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fe747a5238c7b481",
            "arn": "arn:aws:ec2:ap-southeast-3:277707100225:instance/i-09b91d1e388671d8a",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-3b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 16,
            "cpu_options": [
              {
                "core_count": 16,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09b91d1e388671d8a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m6g.4xlarge",
            "ipv6_address_count": 0,
            "key_name": "devops-poc",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0dd3d2eded353696a",
            "private_dns": "ip-172-24-2-174.ap-southeast-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.24.2.174",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 10000,
                "throughput": 125,
                "volume_id": "vol-09a1c21af6735fdc4",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05d639f6ffec0cc98",
            "tags": {
              "Name": "mongos-shard-2a"
            },
            "tags_all": {
              "Name": "mongos-shard-2a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-066f223a84aebc3b0"
            ]
          },
          "dependencies": [
            "module.ec2_mongo.aws_security_group.mongos_sg",
            "module.ec2_mongo.module.ubuntu_ami.data.aws_ami.ubuntu",
            "module.network.aws_subnet.private_subnet_2",
            "module.network.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fe747a5238c7b481",
            "arn": "arn:aws:ec2:ap-southeast-3:277707100225:instance/i-05bad09f9b4a600ee",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-3b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 16,
            "cpu_options": [
              {
                "core_count": 16,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05bad09f9b4a600ee",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m6g.4xlarge",
            "ipv6_address_count": 0,
            "key_name": "devops-poc",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0494f51880c76d44d",
            "private_dns": "ip-172-24-2-40.ap-southeast-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.24.2.40",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 10000,
                "throughput": 125,
                "volume_id": "vol-04b798b395936c423",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05d639f6ffec0cc98",
            "tags": {
              "Name": "mongos-shard-2b"
            },
            "tags_all": {
              "Name": "mongos-shard-2b"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-066f223a84aebc3b0"
            ]
          },
          "dependencies": [
            "module.ec2_mongo.aws_security_group.mongos_sg",
            "module.ec2_mongo.module.ubuntu_ami.data.aws_ami.ubuntu",
            "module.network.aws_subnet.private_subnet_2",
            "module.network.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fe747a5238c7b481",
            "arn": "arn:aws:ec2:ap-southeast-3:277707100225:instance/i-091dab240d4bc34a6",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-3b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 16,
            "cpu_options": [
              {
                "core_count": 16,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-091dab240d4bc34a6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m6g.4xlarge",
            "ipv6_address_count": 0,
            "key_name": "devops-poc",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e8f196880480fbfd",
            "private_dns": "ip-172-24-2-201.ap-southeast-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.24.2.201",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 10000,
                "throughput": 125,
                "volume_id": "vol-019e384019f3cd1ff",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05d639f6ffec0cc98",
            "tags": {
              "Name": "mongos-shard-2c"
            },
            "tags_all": {
              "Name": "mongos-shard-2c"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-066f223a84aebc3b0"
            ]
          },
          "dependencies": [
            "module.ec2_mongo.aws_security_group.mongos_sg",
            "module.ec2_mongo.module.ubuntu_ami.data.aws_ami.ubuntu",
            "module.network.aws_subnet.private_subnet_2",
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_mongo",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mongos_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:277707100225:security-group/sg-066f223a84aebc3b0",
            "description": "Allow access to Mongos Server from EKS private subnets",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-066f223a84aebc3b0",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.24.0.0/21"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "172.24.0.0/21"
                ],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [
                  "172.24.0.0/21"
                ],
                "description": "",
                "from_port": 27018,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27018
              },
              {
                "cidr_blocks": [
                  "172.24.0.0/21"
                ],
                "description": "",
                "from_port": 27019,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27019
              }
            ],
            "name": "mongos-private-sg",
            "name_prefix": "",
            "owner_id": "277707100225",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_mongos"
            },
            "tags_all": {
              "Name": "allow_mongos"
            },
            "timeouts": null,
            "vpc_id": "vpc-08876039a17181d15"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_mongo",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "egress_rule_mongos",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:277707100225:security-group-rule/sgr-0cc258a29fccd7c3d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0cc258a29fccd7c3d",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-066f223a84aebc3b0",
            "security_group_rule_id": "sgr-0cc258a29fccd7c3d",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_mongo.aws_security_group.mongos_sg",
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_mongo",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_mongos",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:277707100225:security-group-rule/sgr-08a5bd2f048de6b60",
            "cidr_ipv4": "172.24.0.0/21",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 27017,
            "id": "sgr-08a5bd2f048de6b60",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-066f223a84aebc3b0",
            "security_group_rule_id": "sgr-08a5bd2f048de6b60",
            "tags": null,
            "tags_all": {},
            "to_port": 27017
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_mongo.aws_security_group.mongos_sg",
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_mongo",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_mongos_config",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:277707100225:security-group-rule/sgr-0b509dfdcaaa0ac40",
            "cidr_ipv4": "172.24.0.0/21",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 27019,
            "id": "sgr-0b509dfdcaaa0ac40",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-066f223a84aebc3b0",
            "security_group_rule_id": "sgr-0b509dfdcaaa0ac40",
            "tags": null,
            "tags_all": {},
            "to_port": 27019
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_mongo.aws_security_group.mongos_sg",
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_mongo",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_mongos_shard",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:277707100225:security-group-rule/sgr-02e07c9b46e723656",
            "cidr_ipv4": "172.24.0.0/21",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 27018,
            "id": "sgr-02e07c9b46e723656",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-066f223a84aebc3b0",
            "security_group_rule_id": "sgr-02e07c9b46e723656",
            "tags": null,
            "tags_all": {},
            "to_port": 27018
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_mongo.aws_security_group.mongos_sg",
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_mongo",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:277707100225:security-group-rule/sgr-0c778933d761070f3",
            "cidr_ipv4": "172.24.0.0/21",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0c778933d761070f3",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-066f223a84aebc3b0",
            "security_group_rule_id": "sgr-0c778933d761070f3",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_mongo.aws_security_group.mongos_sg",
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-008a3d6b7a70f835a",
            "arn": "arn:aws:ec2:ap-southeast-3:277707100225:elastic-ip/eipalloc-008a3d6b7a70f835a",
            "domain": "vpc",
            "id": "eipalloc-008a3d6b7a70f835a",
            "network_border_group": "ap-southeast-3",
            "public_dns": "ec2-16-78-123-229.ap-southeast-3.compute.amazonaws.com",
            "public_ip": "16.78.123.229",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "poc-eip-nat"
            },
            "tags_all": {
              "Name": "poc-eip-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:277707100225:internet-gateway/igw-07e1636e273f8e834",
            "id": "igw-07e1636e273f8e834",
            "owner_id": "277707100225",
            "tags": {
              "Name": "poc-igw"
            },
            "tags_all": {
              "Name": "poc-igw"
            },
            "vpc_id": "vpc-08876039a17181d15"
          },
          "dependencies": [
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-008a3d6b7a70f835a",
            "association_id": "eipassoc-06645b69a35287ced",
            "connectivity_type": "public",
            "id": "nat-021687dd8ee30e685",
            "network_interface_id": "eni-05c22c4c336b0ae89",
            "private_ip": "172.24.3.8",
            "public_ip": "16.78.123.229",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-003345acf35623b18",
            "tags": {
              "Name": "poc-nat-gateway"
            },
            "tags_all": {
              "Name": "poc-nat-gateway"
            }
          },
          "dependencies": [
            "module.network.aws_eip.eip",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_subnet.public_subnet_1",
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:277707100225:route-table/rtb-00721a69381f894d3",
            "id": "rtb-00721a69381f894d3",
            "owner_id": "277707100225",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-021687dd8ee30e685",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "poc-private-route"
            },
            "tags_all": {
              "Name": "poc-private-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-08876039a17181d15"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.eip",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_subnet.public_subnet_1",
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:277707100225:route-table/rtb-0c4a2b14d2076bc37",
            "id": "rtb-0c4a2b14d2076bc37",
            "owner_id": "277707100225",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07e1636e273f8e834",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "poc-public-route"
            },
            "tags_all": {
              "Name": "poc-public-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-08876039a17181d15"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7e97e2f97735804",
            "route_table_id": "rtb-00721a69381f894d3",
            "subnet_id": "subnet-0b6ca07d6d756ab37"
          },
          "dependencies": [
            "module.network.aws_eip.eip",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private_route",
            "module.network.aws_subnet.private_subnet_1",
            "module.network.aws_subnet.public_subnet_1",
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0678648394a5f00b0",
            "route_table_id": "rtb-00721a69381f894d3",
            "subnet_id": "subnet-05d639f6ffec0cc98"
          },
          "dependencies": [
            "module.network.aws_eip.eip",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private_route",
            "module.network.aws_subnet.private_subnet_2",
            "module.network.aws_subnet.public_subnet_1",
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0981288abc0583410",
            "route_table_id": "rtb-0c4a2b14d2076bc37",
            "subnet_id": "subnet-003345acf35623b18"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public_route",
            "module.network.aws_subnet.public_subnet_1",
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04874924d50f12519",
            "route_table_id": "rtb-0c4a2b14d2076bc37",
            "subnet_id": "subnet-010e419de0e034933"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public_route",
            "module.network.aws_subnet.public_subnet_2",
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:277707100225:subnet/subnet-0b6ca07d6d756ab37",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-3a",
            "availability_zone_id": "apse3-az1",
            "cidr_block": "172.24.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b6ca07d6d756ab37",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "277707100225",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "poc-private-ap-southeast-3a",
              "kubernetes.io/cluster/poc-ecosystem-dg": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "poc-private-ap-southeast-3a",
              "kubernetes.io/cluster/poc-ecosystem-dg": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-08876039a17181d15"
          },
          "dependencies": [
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:277707100225:subnet/subnet-05d639f6ffec0cc98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-3b",
            "availability_zone_id": "apse3-az2",
            "cidr_block": "172.24.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d639f6ffec0cc98",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "277707100225",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "poc-private-ap-southeast-3b",
              "kubernetes.io/cluster/poc-ecosystem-dg": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "poc-private-ap-southeast-3b",
              "kubernetes.io/cluster/poc-ecosystem-dg": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-08876039a17181d15"
          },
          "dependencies": [
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:277707100225:subnet/subnet-003345acf35623b18",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-3a",
            "availability_zone_id": "apse3-az1",
            "cidr_block": "172.24.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003345acf35623b18",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "277707100225",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "poc-public-ap-southeast-3a",
              "kubernetes.io/cluster/poc-ecosystem-dg": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "poc-public-ap-southeast-3a",
              "kubernetes.io/cluster/poc-ecosystem-dg": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-08876039a17181d15"
          },
          "dependencies": [
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:277707100225:subnet/subnet-010e419de0e034933",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-3b",
            "availability_zone_id": "apse3-az2",
            "cidr_block": "172.24.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-010e419de0e034933",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "277707100225",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "poc-public-ap-southeast-3b",
              "kubernetes.io/cluster/poc-ecosystem-dg": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "poc-public-ap-southeast-3b",
              "kubernetes.io/cluster/poc-ecosystem-dg": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-08876039a17181d15"
          },
          "dependencies": [
            "module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:277707100225:vpc/vpc-08876039a17181d15",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.24.0.0/21",
            "default_network_acl_id": "acl-0f8a7ab82d6188ff5",
            "default_route_table_id": "rtb-0a281450dc88bafaf",
            "default_security_group_id": "sg-071968a0632b9f4d6",
            "dhcp_options_id": "dopt-063d5e2c9ef45ef8d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08876039a17181d15",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a281450dc88bafaf",
            "owner_id": "277707100225",
            "tags": {
              "Name": "poc-main-vpc"
            },
            "tags_all": {
              "Name": "poc-main-vpc"
            }
          }
        }
      ]
    }
  ]
}